# superCam

./: CMakeLists.txt  main.cpp
res/shaders/: Basic.shader  fragmentCircle.shader  fragmentFractal.shader  fragmentHeart.shader
src/: buffer.cpp  buffer.h  buffer.hpp  glfwContext.cpp  glfwContext.h  maskGenerator.cpp  shader.cpp  shader.h  superCam.cpp  superCam.h
